2001-04-05  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_datums.c: added ntv1_can.dat to list for NAD27 datum.

	* nad_init(): added support for loading NTv1 style datum shift files.

	* cs2cs.c: use pj_latlong_from_proj()

	* pj_init.c: added pj_init_plus().

	* pj_utils.c: new with pj_is_latlong(), and pj_latlong_from_proj()
	functions.

	* pj_strerror.c: added error -43.

2001-04-04  Frank Warmerdam  <warmerdam@pobox.com>

	* rewrote 7 param datum shift to match EPSG:9606, now works with 
	example.

2001-03-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Added -DPROJ_LIB=\"C:/PROJ/\" in src/makefile.vc to provide for
	a default proj data file search directory.

	* Added HOWTO-RELEASE document in CVS.

2001-03-15  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_apply_gridshift.c: fixed bug in pj_load_nadgrids() which
	would sometimes result in the load function failing because of a
	buffer overrun in the grid list string.

2001-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* added nad/epsg database of translations between EPSG PCS/GCS
	codes and PROJ.4 definitions.

2001-02-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Include +ellps in proj example as per suggestion from Michael
	DeChaine.

2001-02-07  Frank Warmerdam  <warmerdam@pobox.com>

	* Cleaned up various warnings when compiled with -Wall.

2001-02-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Added cs2cs.1 man page, and minor updates to nad2nad.1 and proj.1.

	* Added pj_transform docs to pj_init.3.

2001-01-25  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed pj_init() check for WGS84 match as per Bart Adriaanse bug rep.

2000-12-15  Frank Warmerdam  <warmerdam@pobox.com>

	* src/makefile.vc: only delete proj.lib if it exists.

2000-12-01  Frank Warmerdam  <warmerdam@pobox.com>

	* Added proj.def to extra_dist in src/Makefile.am.

2000-11-29  Frank Warmerdam  <warmerdam@pobox.com>

	* Changed strtod() to proj_strtod() in strtod.c, and make use